# Stella-VSLAM-ROS-with-Pixi

./: .gitignore  .gitmodules  LIBGL_FIX.md  README.md  pixi.toml
.pixi/: config.toml
code/stella-vslam/examples/: CMakeLists.txt
code/stella-vslam/examples/src/: run_camera_airsim_log_slam.cc
config/: airsim-1280x720.yaml  airsim-640x480.yaml  airsim-864x480.yaml
lib/Pangolin/components/pango_windowing/: CMakeLists.txt
lib/iridescence/: CMakeLists.txt
lib/pangolin_viewer/: CMakeLists.txt
lib/socket_publisher/src/: data_serializer.cc
lib/stella_vslam/: CMakeLists.txt
lib/stella_vslam/3rd/FBoW/: cmake_uninstall.cmake.in
lib/stella_vslam/3rd/FBoW/src/: fbow.cpp
lib/stella_vslam/example/: walksnail.yaml
lib/stella_vslam/example/uzh_fpv/: UZH_FPV_mono.yaml
lib/stella_vslam/src/stella_vslam/: CMakeLists.txt
lib/stella_vslam_examples/: CMakeLists.txt
lib/stella_vslam_examples/src/: run_camera_airsim_slam.cc
raspi/: build-stella-rpi.sh  calibrate.py  check-stella-rpi.sh  pixi.toml  run-camera.sh  run-demo.sh  test_cam.py
raspi/lib_rpi/: webcam_config.yaml
ros2_ws/src/stella_vslam_ros/: CMakeLists.txt
ros2_ws/src/stella_vslam_ros/cmake/: FindG2O.cmake
ros2_ws/src/stella_vslam_ros/src/: CMakeLists.txt  run_slam.cc  stella_vslam_ros.cc  video_publisher.cc
scripts/: build-deps.sh  build-ros.sh  build-ros2-colcon-stella.sh  build-stella.sh  build.sh  check-dataset.sh  check-deps.sh  check-opengl-symlinks.sh  check-ros.sh  check-stella-ros.sh  check.sh  clean-all.sh  clean.sh  dataset.sh  download-stella-example.sh  run-stella-simple.sh  run-stella-uzh-fpv.sh  test-aist.sh  test-uzh.sh
